// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GCP Cloud Run 1`] = `
Object {
  "hostname": "testhost",
  "message": "hello",
  "pid": 1337,
  "severity": "WARNING",
  "time": "2009-02-13T23:31:30.000Z",
}
`;

exports[`GCP Cloud Run Error Object 1`] = `
Object {
  "hostname": "testhost",
  "message": "Ded 1",
  "pid": 1337,
  "severity": "ERROR",
  "stack_trace": "Error: Ded 1
    at Object.<anonymous> (/srv/test/__tests__/gcp.test.ts:18:18)
    at Promise.then.completed (/srv/test/node_modules/jest-circus/build/utils.js:316:28)
    at new Promise (<anonymous>)
    at callAsyncCircusFn (/srv/test/node_modules/jest-circus/build/utils.js:241:10)
    at _callCircusTest (/srv/test/node_modules/jest-circus/build/run.js:218:40)
    at _runTest (/srv/test/node_modules/jest-circus/build/run.js:155:3)
    at _runTestsForDescribeBlock (/srv/test/node_modules/jest-circus/build/run.js:66:9)
    at _runTestsForDescribeBlock (/srv/test/node_modules/jest-circus/build/run.js:60:9)
    at run (/srv/test/node_modules/jest-circus/build/run.js:25:3)
    at runAndTransformResultsToJestFormat (/srv/test/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:166:21)",
  "time": "2009-02-13T23:31:30.000Z",
  "type": "Error",
}
`;

exports[`GCP Cloud Run Fatal with Error Object 1`] = `
Object {
  "@type": "type.googleapis.com/google.devtools.clouderrorreporting.v1beta1.ReportedErrorEvent",
  "hostname": "testhost",
  "pid": 1337,
  "severity": "CRITICAL",
  "stack_trace": "Error: Ded 2
    at Object.<anonymous> (/srv/test/__tests__/gcp.test.ts:27:25)
    at Promise.then.completed (/srv/test/node_modules/jest-circus/build/utils.js:316:28)
    at new Promise (<anonymous>)
    at callAsyncCircusFn (/srv/test/node_modules/jest-circus/build/utils.js:241:10)
    at _callCircusTest (/srv/test/node_modules/jest-circus/build/run.js:218:40)
    at _runTest (/srv/test/node_modules/jest-circus/build/run.js:155:3)
    at _runTestsForDescribeBlock (/srv/test/node_modules/jest-circus/build/run.js:66:9)
    at _runTestsForDescribeBlock (/srv/test/node_modules/jest-circus/build/run.js:60:9)
    at run (/srv/test/node_modules/jest-circus/build/run.js:25:3)
    at runAndTransformResultsToJestFormat (/srv/test/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:166:21)",
  "time": "2009-02-13T23:31:30.000Z",
}
`;
